fixed overflowing "entrepreneurship" on phone

--- a/themes/nishant-custom/static/scss/app.scss
+++ b/themes/nishant-custom/static/scss/app.scss
@@ -175,4 +175,23 @@ section {
         margin-left: 0 !important;
     }
   }
+
+  section#intro h1 {
+    margin-top: 0;
+    font-size: 1.2em;
+    &.hi{
+      font-size: 1.8em;
+      font-weight: 400;
+      margin-bottom: 0;
+      color: $body-background-dark;
+    }
+
+    &.project-title {
+      font-family: Europa, sans-serif;
+      font-weight: 800;
+      font-size: 1.7em !important;
+      margin-bottom: 0;
+      padding: 5% 0 0 0;
+    }
+  }
 }
